-[REFACTOR] Rename the active filter parameter to activesOnly to have a clear meaning. -[REFACTOR] Moved some instances.
